[gd_scene load_steps=2 format=3 uid="uid://bkacmu0that5w"]

[ext_resource type="Script" uid="uid://do6ff3q4bbd0t" path="res://ui/pause_menu/pause_menu.gd" id="1_hdmo1"]

[node name="PauseMenu" type="Node2D"]
process_mode = 3
script = ExtResource("1_hdmo1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.41960785)

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -105.5
offset_top = 63.0
offset_right = 105.5
offset_bottom = 146.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Paused"

[node name="ResumeButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -206.0
offset_right = 52.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 0
text = "Resume"

[node name="SettingsButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -161.0
offset_right = 52.0
offset_bottom = -129.0
grow_horizontal = 2
grow_vertical = 0
text = "Settings"

[node name="MainMenuButton" type="Button" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -113.0
offset_right = 52.0
offset_bottom = -81.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="ResumeDelayTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.2
one_shot = true
